<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_yourtrips"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_earnings"
            android:icon="@drawable/ic_earning"
            android:title="@string/earnings" />

        <item
            android:id="@+id/nav_document"
            android:icon="@drawable/ic_document"
            android:title="@string/documents" />

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_summary"
            android:title="@string/summary" />
        <item
            android:id="@+id/nav_notification"
            android:visible="false"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_withdraw"
            android:icon="@drawable/ic_withdraw"
            android:title="@string/withdraw" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_complaint"
            android:title="@string/help" />


    </group>

</menu>
