<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_minus25sdp"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:src="@drawable/ic_launcher_web" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_dialog_shape"
        android:elevation="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_25sdp"
            android:elevation="@dimen/_8sdp"
            android:paddingTop="@dimen/_25sdp"
            android:paddingEnd="@dimen/_25sdp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_color_rect_shape"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/red_color_rect_shape"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <com.wherego.delivery.driver.utills.MyBoldTextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/register"
                    android:textSize="@dimen/_12sdp" />

                <com.wherego.delivery.driver.utills.MyBoldTextView
                    android:id="@+id/txtForget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/red_color_rect_shape"
                android:backgroundTint="@color/colorButton"
                android:text="@string/login"

                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                android:orientation="horizontal">

                <com.wherego.delivery.driver.utills.MyTextView
                    android:id="@+id/btnGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/red_color_rect_shape"
                    android:drawableEnd="@drawable/ic_google"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center|end"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/google_login"
                    android:textSize="@dimen/_10sdp" />

                <com.wherego.delivery.driver.utills.MyTextView
                    android:id="@+id/btnFb"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_weight="1"
                    android:background="@drawable/red_color_rect_shape"
                    android:drawableEnd="@drawable/ic_fb"
                    android:gravity="center|end"
                    android:paddingEnd="@dimen/_4sdp"
                    android:text="@string/facebook_login"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/_124sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/home_button"
                android:backgroundTint="@color/colorAccent" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
