<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.WithdrawActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_10sdp">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:src="@drawable/back_white" />

        <com.wherego.driver.utills.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/earned_amount"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMainId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.wherego.driver.utills.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_1sdp"
                    android:text="@string/earned_money"
                    android:textColor="@color/black_text_color"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.wherego.driver.utills.MyBoldTextView
                    android:id="@+id/earnedMoneyTxtView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="@dimen/_5sdp"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


                <com.wherego.driver.utills.MyButton
                    android:id="@+id/addAccountDetailsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/withdraw"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/darker_gray" />

        <com.wherego.driver.utills.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/past_withdraw"
            android:textColor="@color/black_text_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.cardview.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/colorPrimary"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <com.wherego.driver.utills.MyButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/amount"
                    android:textColor="@color/button_text_color" />


                <com.wherego.driver.utills.MyButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/date"
                    android:textColor="@color/button_text_color" />


                <com.wherego.driver.utills.MyButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/status"
                    android:textColor="@color/button_text_color" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerWithdraw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_5sdp"
            android:scrollbars="vertical" />

    </LinearLayout>


</LinearLayout>