<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.WithdrawAmountActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="5dp"
            android:src="@drawable/back_white" />

        <com.wherego.delivery.driver.utills.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/withdraw"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerLayout"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:id="@+id/withdrawLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.wherego.delivery.driver.utills.MyTextView
                android:id="@+id/familyTxtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_amount"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="1"
                android:hint="$0.0"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="14sp" />


            <com.wherego.delivery.driver.utills.MyButton
                android:id="@+id/addAmountBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:paddingLeft="@dimen/_2sdp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <View
        android:id="@+id/viewId"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/card_view"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomCardViews"
        android:layout_below="@+id/viewId"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical">


        <com.wherego.delivery.driver.utills.MyTextView
            android:id="@+id/selectAmountTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/select_account"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_15sdp" />


        <LinearLayout
            android:id="@+id/noBankDetailsFoundLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView

                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_account" />


            <com.wherego.delivery.driver.utills.MyBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/not_added_bank_details_yet"
                android:textColor="@color/black_text_color"
                android:textSize="@dimen/_15sdp" />


        </LinearLayout>


        <ListView
            android:id="@+id/payment_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/bottomCardViews"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">


        <com.wherego.delivery.driver.utills.MyButton
            android:id="@+id/addBankAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/add_bank_account"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>